  - Increased the minimum radicalization required for "Youth Radicalization" to 20 from the 10 that was there before
  - Stability now has a visible impact on counter terror minimum/maximum radicalization
  - Updated AI templates for IFVs and APCs for years 2025 and 2035
  - Added some extra requirements to Special Forces raids (Continental and intercontinental)

  Bugfix:
  - Fixed the Helicopter takes being unable to be researchable for people who own No Step Back but not By Blood Alone
  - Fixed a flip flopped event for Hezbollah - Israel border war
  - Fixed a Syrian focus not properly charging the user nation for the infrastructure
  - Fixed Lichtenstein not showing up as a Potential EU member despite being able to join the EU
  - Fixed the Romanian focus tree's continuous focus position covering up some decisions
  - Fixed the "Encourage Productivity Growth" internal investment not actually improving your productivity
  - Fixed scoping in special projects hopefully resolving all related crashes and errors
  - Fixed the Syrian Focus "Road to Palmyra" randomly adding infrastructure to Mali
  - Fixed the spamming error with has_idea when it should be has_government in Lybia
  - Fixed the "Free States of America" only having the standard default last name
  - Fixed the "Fire and Forget" special project not correctly showing up when it needs to
  - Fixed some No Step Back SP AA and SP ARTY techs being visible in the lineup
  - Fixed some references to the SCO not having additional checks for the other member types giving you the illusion of not being a SCO member
  - Fixed a handful of minor bugs with the formable nations such as missing cores for some and accurate tooltips for others
  - Fixed the Namer and Eitah AFV design decisions
  - Fixed odd overlap in the air strategic window view causing some clipping problems/inability to click certain buttons
  - Fixed China SCO focus "Military Technology Sharing" not properly checking if SCO members are emerging or not