@@ -1,21 +1,5 @@
 leader_traits = {
 
-#US Focus tree
-	#Cabinet picks - Secretary of State
-	USA_Rex_Tillerson = { democratic_drift = 0.01 } #western
-	USA_Giuliani = { democratic_drift = 0.01 } #western
-	USA_Romney = { democratic_drift = 0.01  } #western
-	USA_Alex_Jones = { nationalist_drift = 0.01 } #nationalist
-	##Cabinet picks - Secretary of Deffense
-	USA_Mattis = { democratic_drift = 0.01 } #western
-	USA_Mike_Flynn = { nationalist_drift = 0.01 } #nationalist
-	#Cabinet picks - Attorney General
-	USA_Sessions = { democratic_drift = 0.01 } #western
-	USA_Kris_Kobac = { nationalist_drift = 0.01 } #nationalist
-	#Cabinet picks - White House Chief of Staff
-	USA_Priebus = { democratic_drift = 0.01 } #western
-	USA_Bannon = { nationalist_drift = 0.01 } #nationalist
-
 	has_naval_manufacturer = {
 
 	}
@@ -32,312 +16,6 @@ leader_traits = {
 
 	}
 	has_aircraft_manufacturer = {
-
-	}
-
-#Anti Bully war #1
-	AB_1_NU1 = {
-		random = no
-		stability_factor = -0.02
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU2 = {
-		random = no
-		stability_factor = -0.04
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU3 = {
-		random = no
-		stability_factor = -0.06
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU4 = {
-		random = no
-		stability_factor = -0.08
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU5 = {
-		random = no
-		stability_factor = -0.1
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU6 = {
-		random = no
-		stability_factor = -0.12
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU7 = {
-		random = no
-		stability_factor = -0.14
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU8 = {
-		random = no
-		stability_factor = -0.16
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU9 = {
-		random = no
-		stability_factor = -0.18
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_1_NU10 = {
-		random = no
-		stability_factor = -0.2
-		ai_will_do = {
-			factor = 1
-		}
-	}
-
-#Anti Bully war #2
-	AB_2_NU1 = {
-		random = no
-		stability_factor = -0.02
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU2 = {
-		random = no
-		stability_factor = -0.04
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU3 = {
-		random = no
-		stability_factor = -0.06
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU4 = {
-		random = no
-		stability_factor = -0.08
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU5 = {
-		random = no
-		stability_factor = -0.1
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU6 = {
-		random = no
-		stability_factor = -0.12
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU7 = {
-		random = no
-		stability_factor = -0.14
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU8 = {
-		random = no
-		stability_factor = -0.16
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU9 = {
-		random = no
-		stability_factor = -0.18
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	AB_2_NU10 = {
-		random = no
-		stability_factor = -0.2
-		ai_will_do = {
-			factor = 1
-		}
-	}
-
-
-#National Unity gain
-	NU_gain_1 = {
-		random = no
-		stability_weekly = -0.0002 #-1% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_2 = {
-		random = no
-		stability_weekly = 0.003 #-0.75% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_3 = {
-		random = no
-		stability_weekly = 0.02 #-0.5% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_4 = {
-		random = no
-		stability_weekly = 0.02 #-0.25% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_5 = {
-		random = no
-		stability_weekly = 0 #0% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_6 = {
-		random = no
-		stability_weekly = 0.002 #0.2% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_7 = {
-		stability_weekly = 0.002 #0.4% a year
-		ai_will_do = {
-				factor = 1
-			}
-	}
-	NU_gain_8 = {
-		random = no
-		stability_weekly = 0.02 #0.6% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_9 = {
-		random = no
-		stability_weekly = 0.02 #0.8% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-	NU_gain_10 = {
-		random = no
-		stability_weekly = 0.02 #1% a year
-		ai_will_do = {
-			factor = 1
-		}
-	}
-
-#Political Power gain
-	pp_gain0 = {
-		random = no
-		political_power_factor = -0.7
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain1 = {
-		random = no
-		political_power_factor = -0.6
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain2 = {
-		random = no
-		political_power_factor = -0.5
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain3 = {
-		random = no
-		political_power_factor = -0.4
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain4 = {
-		random = no
-		political_power_factor = -0.3
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain5 = {
-		random = no
-		political_power_factor = -0.2
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain6 = {
-		random = no
-		political_power_factor = -0.1
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain7 = {
-		random = no
-		#political_power_factor = 1
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain8 = {
-		random = no
-		political_power_factor = 0.1
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain9 = {
-		random = no
-		political_power_factor = 0.2
-		ai_will_do = {
-			factor = 1
-		}
-
-	}
-	pp_gain10 = {
-		random = no
-		political_power_factor = 0.3
-		ai_will_do = {
-			factor = 1
-		}
 
 	}
 
@@ -2984,6 +2662,14 @@ leader_traits = {
 	musician = {
 		random = yes
 		stability_factor = 0.04
+		ai_will_do = {
+			factor = 1
+		}
+	}
+	fervent_anti_migrant = {
+		random = yes
+		migration_rate_value_factor = -0.25
+
 		ai_will_do = {
 			factor = 1
 		}
