@@ -12358,6 +12358,9 @@ focus_tree = {
 		available = {
 			gdp_debt_ratio_higher_5 = yes
 		}
+		bypass = {
+			gdp_debt_ratio_lower_5 = yes
+		}
 
 		completion_reward = {
 			log = "[GetDateText]: [THIS.GetName]: Focus BRA_reduce_debts"
