@@ -62,15 +62,6 @@ opinion_modifiers = {
 	USA_ENG_SPECIAL = {
 		value = 100
 	}
-	USA_Tillerson_EFFECT = {
-		value = 25
-	}
-	USA_Mattis_EFFECT = {
-		value = 25
-	}
-	USA_Flynn_EFFECT = {
-		value = 25
-	}
 	USA_BAN_MUSLIMS = {
 		value = -10
 	}
