@@ -79,8 +79,12 @@ NATO_leave = {
 			add_opinion_modifier = { target = PREV modifier = left_nato }
 
 			# Remove nato opinion boost.
+			remove_opinion_modifier = { target = PREV modifier = NATO_aspirant }
 			remove_opinion_modifier = { target = PREV modifier = NATO_member_modifier }
-			PREV = { remove_opinion_modifier = { target = PREV modifier = NATO_member_modifier } }
+			PREV = {
+				remove_opinion_modifier = { target = PREV modifier = NATO_member_modifier }
+				remove_opinion_modifier = { target = PREV modifier = NATO_aspirant }
+			}
 
 			# Remove military access.
 			diplomatic_relation = {
