@@ -543,7 +543,7 @@ set_leader_SPR = {
 		}
 	}
 	else_if = { limit = { has_country_flag = set_Nat_Populism }
-		if = { limit = { check_variable = { Nat_Populism_leader = 0 } }
+		if = { limit = { check_variable = { Nat_Populism_leader = 0 } has_country_flag = SPR_espana_2000_forms }
 			add_to_variable = { Nat_Populism_leader = 1 }
 			hidden_effect = { kill_country_leader = yes }
 
@@ -553,17 +553,18 @@ set_leader_SPR = {
 				ideology = Nat_Populism
 				traits = {
 					nationalist_Nat_Populism
+					fervent_anti_migrant
 				}
 			}
 
 			if = { limit = { has_country_flag = do_not_retire } subtract_from_variable = { Nat_Populism_leader = 1 } }
-			# Skip if Espana 2000 is not currently RWP
-			if = { limit = { NOT = { has_country_flag = SPR_espana_2000_forms } }
-				set_temp_variable = { b = 1 }
-			}
 			set_temp_variable = { b = 1 }
 		}
-		if = { limit = { check_variable = { Nat_Populism_leader = 1 } }
+		else_if = {
+			limit = { check_variable = { Nat_Populism_leader = 0 } has_country_flag = SPR_vox_forms }
+			add_to_variable = { Nat_Populism_leader = 1 }
+		}
+		if = { limit = { check_variable = { Nat_Populism_leader = 1 } NOT = { check_variable = { b = 1 } } has_country_flag = SPR_vox_forms }
 			add_to_variable = { Nat_Populism_leader = 1 }
 			hidden_effect = { kill_country_leader = yes }
 
@@ -573,17 +574,15 @@ set_leader_SPR = {
 				ideology = Nat_Populism
 				traits = {
 					nationalist_Nat_Populism
+					career_politician
+					fervent_anti_migrant
 				}
 			}
 
 			if = { limit = { has_country_flag = do_not_retire } subtract_from_variable = { Nat_Populism_leader = 1 } }
-			# Skip if Vox has not formed
-			if = { limit = { NOT = { has_country_flag = SPR_vox_forms } }
-				set_temp_variable = { b = 1 }
-			}
 			set_temp_variable = { b = 1 }
 		}
-		if = { limit = { check_variable = { Nat_Populism_leader = 2 } }
+		if = { limit = { check_variable = { Nat_Populism_leader = 2 } NOT = { check_variable = { b = 1 } } has_country_flag = SPR_vox_forms }
 			add_to_variable = { Nat_Populism_leader = 1 }
 			hidden_effect = { kill_country_leader = yes }
 
@@ -593,14 +592,12 @@ set_leader_SPR = {
 				ideology = Nat_Populism
 				traits = {
 					nationalist_Nat_Populism
+					career_politician
+					fervent_anti_migrant
 				}
 			}
 
 			if = { limit = { has_country_flag = do_not_retire } subtract_from_variable = { Nat_Populism_leader = 1 } }
-			# Skip if Vox has not formed
-			if = { limit = { NOT = { has_country_flag = SPR_vox_forms } }
-				set_temp_variable = { b = 1 }
-			}
 			set_temp_variable = { b = 1 }
 		}
 	}
