@@ -4405,9 +4405,9 @@ technologies = {
 				country_event = MD_nuclear_energy.1
 			}
 		}
-		nuclear_energy_generation_modifier = 0.05
+		nuclear_energy_generation_modifier = 0.075
 		nuclear_fuel_consumption_modifier = -0.05
-		production_speed_nuclear_reactor_factor = 0.05
+		production_speed_nuclear_reactor_factor = 0.10
 		research_cost = 1
 		start_year = 2015
 		show_equipment_icon = yes
@@ -4464,9 +4464,9 @@ technologies = {
 				country_event = MD_nuclear_energy.1
 			}
 		}
-		nuclear_energy_generation_modifier = 0.05
+		nuclear_energy_generation_modifier = 0.075
 		nuclear_fuel_consumption_modifier = -0.05
-		production_speed_nuclear_reactor_factor = 0.05
+		production_speed_nuclear_reactor_factor = 0.10
 		research_cost = 1
 		start_year = 2020
 		show_equipment_icon = yes
@@ -4523,9 +4523,9 @@ technologies = {
 				country_event = MD_nuclear_energy.1
 			}
 		}
-		nuclear_energy_generation_modifier = 0.05
+		nuclear_energy_generation_modifier = 0.075
 		nuclear_fuel_consumption_modifier = -0.05
-		production_speed_nuclear_reactor_factor = 0.05
+		production_speed_nuclear_reactor_factor = 0.10
 		research_cost = 1
 		start_year = 2025
 		show_equipment_icon = yes
@@ -4582,9 +4582,9 @@ technologies = {
 				country_event = MD_nuclear_energy.1
 			}
 		}
-		nuclear_energy_generation_modifier = 0.05
+		nuclear_energy_generation_modifier = 0.075
 		nuclear_fuel_consumption_modifier = -0.05
-		production_speed_nuclear_reactor_factor = 0.05
+		production_speed_nuclear_reactor_factor = 0.10
 		research_cost = 1
 		start_year = 2030
 		show_equipment_icon = yes
@@ -4641,9 +4641,9 @@ technologies = {
 				country_event = MD_nuclear_energy.1
 			}
 		}
-		nuclear_energy_generation_modifier = 0.05
+		nuclear_energy_generation_modifier = 0.075
 		nuclear_fuel_consumption_modifier = -0.05
-		production_speed_nuclear_reactor_factor = 0.05
+		production_speed_nuclear_reactor_factor = 0.10
 		research_cost = 1
 		start_year = 2035
 		show_equipment_icon = yes
@@ -4704,9 +4704,9 @@ technologies = {
 				country_event = MD_nuclear_energy.1
 			}
 		}
-		nuclear_energy_generation_modifier = 0.05
+		nuclear_energy_generation_modifier = 0.075
 		nuclear_fuel_consumption_modifier = -0.05
-		production_speed_nuclear_reactor_factor = 0.05
+		production_speed_nuclear_reactor_factor = 0.10
 		research_cost = 1
 		start_year = 2040
 		show_equipment_icon = yes
@@ -4764,9 +4764,9 @@ technologies = {
 				country_event = MD_nuclear_energy.1
 			}
 		}
-		nuclear_energy_generation_modifier = 0.05
+		nuclear_energy_generation_modifier = 0.075
 		nuclear_fuel_consumption_modifier = -0.05
-		production_speed_nuclear_reactor_factor = 0.05
+		production_speed_nuclear_reactor_factor = 0.10
 		research_cost = 1
 		start_year = 2045
 		show_equipment_icon = yes
