@@ -191,6 +191,7 @@
  Pro_Western: "Pro-Western"
  Fighter: "Fighter"
  Reformer: "Reformer"
+ fervent_anti_migrant: "Fervent Anti-Migrant"
  fighting_with_at_least_18_units: "Currently Commanding More than 17 units\n"
 
  # Belarus
