@@ -389,39 +389,6 @@
  #Ukraine New
  recognized_holodomor: "Recognized the Holodomor"
 
- AB_1_NU1: "Anti-Bully System #1"
- AB_1_NU2: "Anti-Bully System #1"
- AB_1_NU3: "Anti-Bully System #1"
- AB_1_NU4: "Anti-Bully System #1"
- AB_1_NU5: "Anti-Bully System #1"
- AB_1_NU6: "Anti-Bully System #1"
- AB_1_NU7: "Anti-Bully System #1"
- AB_1_NU8: "Anti-Bully System #1"
- AB_1_NU9: "Anti-Bully System #1"
- AB_1_NU10: "Anti-Bully System #1"
-
- AB_2_NU1: "Anti-Bully System #1"
- AB_2_NU2: "Anti-Bully System #2"
- AB_2_NU3: "Anti-Bully System #2"
- AB_2_NU4: "Anti-Bully System #2"
- AB_2_NU5: "Anti-Bully System #2"
- AB_2_NU6: "Anti-Bully System #2"
- AB_2_NU7: "Anti-Bully System #2"
- AB_2_NU8: "Anti-Bully System #2"
- AB_2_NU9: "Anti-Bully System #2"
- AB_2_NU10: "Anti-Bully System #2"
-
- pp_gain1: "National Unity 10%"
- pp_gain2: "National Unity 20%"
- pp_gain3: "National Unity 30%"
- pp_gain4: "National Unity 40%"
- pp_gain5: "National Unity 50%"
- pp_gain6: "National Unity 60%"
- pp_gain7: "National Unity 70%"
- pp_gain8: "National Unity 80%"
- pp_gain9: "National Unity 90%"
- pp_gain10: "National Unity 100%"
-
  SWI_alps_treaty: "Alps Treaty"
  SWI_alps_treaty_trade: "Alps Treaty"
  SWI_european_tanks_opinion: "Seeks Tank License"
