@@ -19,8 +19,9 @@ v1.11.2
   - Stability now has a visible impact on counter terror minimum/maximum radicalization
   - Updated AI templates for IFVs and APCs for years 2025 and 2035
   - Added some extra requirements to Special Forces raids (Continental and intercontinental)
+  - Increased the nuclear energy construction speed and power generation starting from 2015 going forward
 
-  Bugfix:
+ Bugfix:
   - Fixed the Helicopter takes being unable to be researchable for people who own No Step Back but not By Blood Alone
   - Fixed a flip flopped event for Hezbollah - Israel border war
   - Fixed a Syrian focus not properly charging the user nation for the infrastructure
@@ -52,12 +53,15 @@ v1.11.2
   - Fixed countries being able to raid their own puppets
   - Fixed countries being able to raid people they have non-aggression pacts with
   - Fixed an issue with the F-35 purchase approval event firing for the wrong country
+  - Fixed the VOX leaders not showing up correctly in the leader list
 
  Content:
   - New Focus Trees: Tajikistan
   - Improved Focus Trees: Germany
   - Added a new special project "Helicopter Design Experiments"
   - Added a cheat decisions for the European Union to force them to always vote yes
+  - Added new Indian MIOs to give them some more diversity in their starting military industrial options
+  - Added some new leader traits to VOX political leaders
 
  Ideological Powers:
   - Modifiers in tooltips now have text icons
@@ -84,7 +88,7 @@ v1.11.2
  History:
   - Improved multiples OOB/Stockpile
   - Added many variants of rifles and other equipment
-  
+
  Graphics:
   - Added dozens of new 3D models
   - Made the AI more competent in choosing the right 3D model and GFX for their respective country.
